--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
+    <string name="main_title">Welcome\nTo</string>
+    <string name="main_AppName">EASY TAX</string>
     <string name="app_name">EasyTax</string>
+    <string name="next_btn">Next</string>
 </resources>
